# smart-changelog

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  LICENSE  README.md  manifest.yaml  myenv  pyproject.toml
.github/workflows/: changelog.yml
smart_changelog/: __init__.py  ai_helper.py  cli.py  jira_client.py  updater.py
smart_changelog.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
smart_changelog/templates/: version_block.md.j2
tests/: run_tests.py  test_ai_helper.py  test_cli.py  test_jira_client.py  test_updater.py
